# DED

./: LICENSE  README.md
Jorvik/Animated/: Thumbs.db
Jorvik/Animated/Frida Animation/: Thumbs.db
Jorvik/Animated/Grimm  Animation/: Thumbs.db
Jorvik/Animated/Kettle Animation/: Thumbs.db
Jorvik/Animated/Petronus Animation/: Thumbs.db
Jorvik/Animated/Sigurd Animation/: Thumbs.db
Jorvik/Animated/Snorri Animation/: Thumbs.db
Jorvik/Animated/Unni Animation/: Thumbs.db
Jorvik/icons/: Thumbs.db
Jorvik/npc/: Thumbs.db
Jorvik/objects/: Thumbs.db
Jorvik/objects/bone/: Thumbs.db  factfile.txt  factfileClean.tex  factfileTracked.tex
Jorvik/objects/byzantine/: Thumbs.db  factfile.txt  factfileClean.tex  factfileTracked.tex
Jorvik/objects/leather/: Thumbs.db  factfile.txt  factfileClean.tex  factfileTracked.tex
Jorvik/objects/metal/: Thumbs.db  factfile.txt  factfileClean.tex  factfileTracked.tex
Jorvik/objects/pottery/: Thumbs.db  factfile.txt  factfileClean.tex  factfileTracked.tex
Jorvik/objects/shields/: Thumbs.db  factfile.txt  factfileClean.tex  factfileTracked.tex
Jorvik/objects/weaver/: Thumbs.db  factfile.txt  factfileClean.tex  factfileTracked.tex
Jorvik/objects/wood/: Thumbs.db  factfile.txt  factfileClean.tex  factfileTracked.tex
Jorvik/places/: Thumbs.db
Jorvik/runes/: Thumbs.db
Poppy/Managed/: .gitignore  CMakeLists.txt  build.default.worker.json  build.director.ai.json  build.npc.ai.json  build.player.ai.json  build.plot.ai.json  spatialos.Default_Worker.worker.json  spatialos.Director_AI.worker.json  spatialos.NPC_AI.worker.json  spatialos.Player_AI.worker.json  spatialos.Plot_AI.worker.json
Poppy/Managed/src/: startup.cc
Poppy/Managed/src/ai/: AI_node.h  bayes.h
Poppy/Managed/src/ded/: ded_enum_maps.h
Poppy/Managed/src/ded/directorWorker/: director_worker.h
Poppy/Managed/src/ded/npcWorker/: constants.h  murderer.h  npc_role_base.h  npc_worker.h  suspect.h  victim.h
Poppy/Managed/src/ded/playerWorker/: player.h
Poppy/Managed/src/dpge/: basic_net.h  plot_worker.h  settings - Copy.h
Poppy/Managed/src/operations/: constants.h  core_utility.h  entity_handling.h  operator.h  thread_builder.h
Poppy/Managed/src/operations/entities/: actor_entity.h  base_entity_game_object.h  entities.h  entities_map.h  entity_builder.h  entity_game_object.h  entity_manager.h  entity_template_factory.h  thread_pool.h
Poppy/Managed/src/rde/: knowledge_builder.h
Poppy/bayes c++/include/: LICENSE_academic.txt  SmileDLL.vcxproj.filters  abn.h  cbl.h  defcpt.h  defdemorgan.h  deflist.h  diag_network.h  dmatrix.h  doublearray.h  errors.h  errorstrings.h  extradefinition.h  fci.h  generalequation.h  nb.h  network.h  nodeval.h  smile.h  smilearn.h  stringarray.h  tan.h  validator.h
Poppy/schema-temp/: CMakeLists.txt
Poppy/schema-temp/ded/: ActorInfo.schema  CurrentState.schema  EntitySpawning.schema  InfoEnum.schema
Poppy/schema-temp/dpge/: PlotComponents.schema  PlotEnum.schema  PlotMap.schema
Poppy/schema-temp/improbable/: ComponentIDs.txt
Poppy/schema-temp/rde/: KnowledgeBase.schema
Poppy/smilewrapper/smilewrapper/: smilewrapper.sln
Poppy/temp/Snapshots/: Snapshots.csproj  Snapshots.targets  packages.config
SL/SL Animation/: Untitled.avm  crosslegs.bvh  dead.avm  dying.bvh  sip.avm  wave.bvh
SecondLife/: simpleBot.py  simpleBot2.py
SecondLife/Actor/: Actor.csproj  Actor.sln  DED.cs  UpgradeLog.XML  UpgradeLog.htm  actors.txt  dpge.txt  init.txt  interrogation.cix  mysterydrama.txt  speech test.txt  suspect_motive.xdsl
SecondLife/Actor/Backup/: Actor.csproj  Actor.sln  DED.cs
SecondLife/Actor/Backup1/: Actor.csproj  Actor.sln
SecondLife/Actor/DPGE/: PlotNetwork.cs
SecondLife/Actor/Decision/: ActionFilter.cs  BaseUtility.cs  Strategy.cs
SecondLife/Actor/Director/: DirectorDrama.cs  Schema.cs
SecondLife/Actor/Utils/: Bayes.cs  Node.cs  SLInterface.cs
SecondLife/Actor/logs/: 08.07.2010.txt  09.07.2010 chat.txt
SecondLife/Actor/plot/: murder_scene.xdsl  murder_weapon.xdsl  murderer.xdsl  object.xdsl  suspect.xdsl  victim.xdsl  weapon.xdsl
SecondLife/MyFirstBot/: Appearance.cs  MyFirstBot.csproj  MyFirstBot.sln  Teleport.cs  UpgradeLog.XML  UpgradeLog.htm
SecondLife/MyFirstBot/Backup/: Gesture.cs  IMHandler.cs  Move.cs  MyFirstBot.csproj  MyFirstBot.sln
SecondLife/MyFirstBot/Backup1/: MyFirstBot.cs  MyFirstBot.csproj  MyFirstBot.sln
SecondLife/Objects/: prims ids.txt
SecondLife/SL Animation/: crosslegs.avm  dead.bvh  dying.avm  sip.bvh  sip18.12.09.avm  sip18.12.09.bvh  wave.avm
SecondLife/SL-Client/SL-Client/: ClientManager.cs  (+5 more)
SecondLife/Scripts/: drink current.txt  drink in gun position.txt
SecondLife/SerializationTest/: Form1.cs  Form1.resx  SerializationTest.csproj  UpgradeLog.XML
SecondLife/SimpleBot/: Program.py  SimpleBot.pyproj  SimpleBot.sln  UpgradeLog.XML  UpgradeLog.htm  bot.py
SecondLife/Tests/: test run 25.05.09.doc
SecondLife/logs/: 08.07.2010.txt  08.07.2010_temp.txt  ActorLogReleaseOld.txt  ActorLogRelease_calc_times.txt  ActorLogWebEpisodeTimes.txt  ActorLog_release.txt  YearlyActorLog-2008.txt  YearlyActorLog-2008_calc_times.txt  YearlyActorLog-2010_calc_times.txt
User study/: Episode_length.py  printout.txt
User study/stats/: main.py
(+403 files in other folders)
